# nwo-cookiecutter

./: LICENSE  README.md  cookiecutter.json
{{cookiecutter.project_name}}/: .env  Env.ps1  Load-Env.ps1  README.md  env.sh
{{cookiecutter.project_name}}/data/: README.md
{{cookiecutter.project_name}}/paper/: README.md
{{cookiecutter.project_name}}/references/: README.md
{{cookiecutter.project_name}}/reports/: README.md
{{cookiecutter.project_name}}/src/: README.md  pyproject.toml
{{cookiecutter.project_name}}/src/{{cookiecutter.repo_name}}/: functions.py  paths.py
{{cookiecutter.project_name}}/src/{{cookiecutter.repo_name}}/scripts/: hello.py
